--- a/installer/locale/pt_BR.po
+++ b/installer/locale/pt_BR.po
@@ -6,10 +6,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ecere\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"Report-Msgid-Bugs-To: Ricardo Nabinger Sanchez <rnsanchez@wait4.org>\n"
 "POT-Creation-Date: 2014-03-19 01:00+0000\n"
-"PO-Revision-Date: 2014-03-19 01:34-0500\n"
-"Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
+"PO-Revision-Date: 2014-03-27 23:13-0300\n"
+"Last-Translator: Ricardo Nabinger Sanchez <rnsanchez@wait4.org>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -101,269 +101,275 @@ msgstr "Espaço disp."
 
 #: src/installer.ec:292
 msgid "Binary Utils"
-msgstr ""
+msgstr "Utilitários Binários"
 
 #: src/installer.ec:340
 msgid "Binutils Docs"
-msgstr ""
+msgstr "Documentação Binutils"
 
 #: src/installer.ec:583
 msgid "By installing the Ecere SDK, you agree to the"
-msgstr ""
+msgstr "Ao instalar o Ecere SDK, você concorda com o"
 
 #: ../ide/src/licensing.ec:58
 msgid ""
 "By using it you agree to the terms and conditions of their individual "
 "licenses."
 msgstr ""
+"Ao usáa-lo você concorda com os termos e condições das licenças "
+"individuais."
 
 #: src/installer.ec:313
 msgid "C++ Compiler"
-msgstr ""
+msgstr "Compilador C++"
 
 #: src/installer.ec:681 src/installer.ec:1169
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: src/installer.ec:806
 msgid "Choose Components, Locations and Install Options"
-msgstr ""
+msgstr "Escolha os Componentes, Locais, e Opções de Instalação"
 
 #: src/installer.ec:793
 msgid ""
 "Choose in which folder to install the Ecere SDK, which features\n"
 "of the SDK to install, as well as where to install program icons."
 msgstr ""
+"Escolha em qual pasta instalar o Ecere SDK, quais funcionalidades\n"
+"do SDK instalar, bem como onde instalar os ícones do programa."
 
 #: src/installer.ec:1363
 msgid "Close"
-msgstr ""
+msgstr "Fechar"
 
 #: src/installer.ec:807
 msgid "Component"
-msgstr ""
+msgstr "Componente"
 
 #: src/installer.ec:1387
 msgid "Configuring Ecere IDE..."
-msgstr ""
+msgstr "Configurando a Ecere IDE..."
 
 #: src/installer.ec:357
 msgid "Core SDK Files"
-msgstr ""
+msgstr "Arquivos Principais do SDK"
 
 #: src/installer.ec:304 src/installer.ec:305
 msgid "Data Access"
-msgstr ""
+msgstr "Acesso a Dados"
 
 #: src/installer.ec:263
 msgid "Database"
-msgstr ""
+msgstr "Banco de Dados"
 
 #: src/installer.ec:421
 msgid "Desktop Icon"
-msgstr ""
+msgstr "Ícone no Desktop"
 
 #: src/installer.ec:808
 msgid "Destination Folder"
-msgstr ""
+msgstr "Pasta Destino"
 
 #: src/installer.ec:359
 msgid "Documentation"
-msgstr ""
+msgstr "Documentação"
 
 #: src/installer.ec:332
 msgid "Ecere Book"
-msgstr ""
+msgstr "Livro Ecere"
 
 #: src/installer.ec:335
 msgid "Ecere Coursework"
-msgstr ""
+msgstr "Material Didático Ecere"
 
 #: src/installer.ec:308
 msgid "Ecere Extras"
-msgstr ""
+msgstr "Extras para Ecere"
 
 #: src/installer.ec:4
 msgid "Ecere SDK v0.44.10 -- built on March 9th, 2014 "
-msgstr ""
+msgstr "Ecere SDK v0.44.10 -- construído em 9 de março, 2014 "
 
 #: src/installer.ec:442 src/installer.ec:1147
 msgid ""
 "Ecere Software Development Kit Setup - v0.44.10 \"RyÅan-ji\" 64 Bit Edition"
 msgstr ""
+"Configurador do Ecere Software Development Kit - v0.44.10 \"RyÅan-ji\" Versão 64 Bits"
 
 #: src/installer.ec:334
 msgid "Ecere Tutorials"
-msgstr ""
+msgstr "Tutoriais Ecere"
 
 #: src/installer.ec:306 src/installer.ec:307
 msgid "Ecere Vanilla"
-msgstr ""
+msgstr "Ecere Padrão"
 
 #: src/installer.ec:1759
 msgid "Finish"
-msgstr ""
+msgstr "Finalizar"
 
 #: src/installer.ec:337
 msgid "G++ Docs"
-msgstr ""
+msgstr "Documentação G++"
 
 #: src/installer.ec:336
 msgid "GCC Docs"
-msgstr ""
+msgstr "Documentação GCC"
 
 #: src/installer.ec:338
 msgid "GDB Docs"
-msgstr ""
+msgstr "Documentação GDB"
 
 #: src/installer.ec:289
 msgid "GNU C Compiler"
-msgstr ""
+msgstr "GNU C Compiler"
 
 #: ../ide/src/IDESettings.ec:736
 msgid "GNU Compiler Collection (GCC) / GNU Make"
-msgstr ""
+msgstr "GNU Compiler Collection (GCC) / GNU Make"
 
 #: src/installer.ec:290
 msgid "GNU Debugger"
-msgstr ""
+msgstr "GNU Debugger"
 
 #: src/installer.ec:293
 msgid "GNU Make"
-msgstr ""
+msgstr "GNU Make"
 
 #: src/installer.ec:310 src/installer.ec:311
 msgid "GNU Regexp"
-msgstr ""
+msgstr "GNU Regexp"
 
 #: src/installer.ec:266
 msgid "GUI & Graphics"
-msgstr ""
+msgstr "Interface de Usuário & Gráficos"
 
 #: src/installer.ec:265
 msgid "Games"
-msgstr ""
+msgstr "Jogos"
 
 #: ../ide/src/licensing.ec:166
 msgid "I agree"
-msgstr ""
+msgstr "Eu concordo"
 
 #: ../ide/src/licensing.ec:153
 msgid "I don't agree"
-msgstr ""
+msgstr "Eu não concordo"
 
 #: src/installer.ec:670 src/installer.ec:1163
 msgid "Install"
-msgstr ""
+msgstr "Instalar"
 
 #: src/installer.ec:419
 msgid "Install for All Users"
-msgstr ""
+msgstr "Instalar para Todos os Usuários"
 
 #: src/installer.ec:1368
 msgid "Installation Cancelled"
-msgstr ""
+msgstr "Instalação Cancelada"
 
 #: src/installer.ec:1367
 msgid "Installation Cancelled."
-msgstr ""
+msgstr "Instalação Cancelada."
 
 #: src/installer.ec:1763
 msgid "Installation Complete"
-msgstr ""
+msgstr "Instalação Completa"
 
 #: src/installer.ec:1762
 msgid "Installation Complete."
-msgstr ""
+msgstr "Instalação Completa."
 
 #: src/installer.ec:214
 msgid "Installing %s..."
-msgstr ""
+msgstr "Instalando %s..."
 
 #: src/installer.ec:1654
 msgid "Installing Desktop Icon..."
-msgstr ""
+msgstr "Instalando Ícone de Desktop..."
 
 #: src/installer.ec:1682
 msgid "Installing Quicklaunch Icon..."
-msgstr ""
+msgstr "Instalando Ícone de Inicialização Rápida..."
 
 #: src/installer.ec:1568
 msgid "Installing Start Menu Icons..."
-msgstr ""
+msgstr "Instalando Ícones do Menu Iniciar"
 
 #: src/installer.ec:1195
 msgid "Installing the Ecere SDK"
-msgstr ""
+msgstr "Instalando o Ecere SDK"
 
 #: ../ide/src/licensing.ec:38
 msgid "License Agreements"
-msgstr ""
+msgstr "Contrato de Licença"
 
 #: src/installer.ec:339
 msgid "Make Docs"
-msgstr ""
+msgstr "Documentação Make"
 
 #: ../ide/src/IDESettings.ec:739
 msgid "Microsoft Visual Studio 2005 (8.0) Compiler"
-msgstr ""
+msgstr "Compilador Microsoft Visual Studio 2005 (8.0)"
 
 #: ../ide/src/IDESettings.ec:740
 msgid "Microsoft Visual Studio 2008 (9.0) Compiler"
-msgstr ""
+msgstr "Compilador Microsoft Visual Studio 2008 (9.0)"
 
 #: ../ide/src/IDESettings.ec:742
 msgid "Microsoft Visual Studio 2010 (10.0) Compiler"
-msgstr ""
+msgstr "Compilador Microsoft Visual Studio 2010 (10.0)"
 
 #: src/installer.ec:291
 msgid "MinGW-w64 Runtime"
-msgstr ""
+msgstr "Ambiente de execução MinGW-w64"
 
 #: src/installer.ec:267
 msgid "Miscellaneous"
-msgstr ""
+msgstr "Miscelânea"
 
 #: src/installer.ec:268
 msgid "Networking"
-msgstr ""
+msgstr "Rede"
 
 #: src/installer.ec:1182
 msgid ""
 "Please wait while the Ecere Software Development Kit is being installed."
 msgstr ""
+"Por favor aguarde enquanto o Ecere Software Development Kit está sendo instalado."
 
 #: ../ide/src/IDESettings.ec:738
 msgid "Portable C Compiler / GNU Make"
-msgstr ""
+msgstr "Portable C Compiler / GNU Make"
 
 #: src/installer.ec:422
 msgid "Quicklaunch Icon"
-msgstr ""
+msgstr "Ícone de Inicialização Rápida"
 
 #: src/installer.ec:1473
 msgid "Registering uninstaller..."
-msgstr ""
+msgstr "Registrando desinstalador..."
 
 #: src/installer.ec:809
 msgid "Req. Space"
-msgstr ""
+msgstr "Espaço Nec."
 
 #: src/installer.ec:1711
 msgid "Resgistering File Types..."
-msgstr ""
+msgstr "Registrando Tipos de Arquivos..."
 
 #: src/installer.ec:285 src/installer.ec:286
 msgid "Runtime Library"
-msgstr ""
+msgstr "Biblioteca de Execução"
 
 #: src/installer.ec:360
 msgid "Samples"
-msgstr ""
+msgstr "Exemplos"
 
 #: src/installer.ec:452
 msgid "Select a new location"
-msgstr ""
+msgstr "Selecione um novo local"
 
 #: src/installer.ec:780
 msgid ""
@@ -371,6 +377,9 @@ msgid ""
 "associations, and system\n"
 "environment modifications:"
 msgstr ""
+"Selecione ícones para instalar,\n"
+"associações de arquivos, e\n"
+"modificações do ambiente de sistema:"
 
 #: src/installer.ec:759
 msgid ""
@@ -378,6 +387,9 @@ msgid ""
 "folder where to install\n"
 "all components:"
 msgstr ""
+"Selecione a pasta raiz\n"
+"aonde instalar todos os\n"
+"componentes:"
 
 #: src/installer.ec:772
 msgid ""
@@ -391,51 +403,60 @@ msgid ""
 "based on the main\n"
 "destination folder."
 msgstr ""
+"Selecione os componentes\n"
+"que você deseja\n"
+"instalar:\n"
+"\n"
+"Você pode customizar o\n"
+"local de instalação de cada um\n"
+"deles, ou usar os padrões\n"
+"com base na pasta\n"
+"destino principal."
 
 #: src/installer.ec:784
 msgid "Space Required: "
-msgstr ""
+msgstr "Espaço Necessário: "
 
 #: src/installer.ec:420
 msgid "Start Menu Group"
-msgstr ""
+msgstr "Grupo no Menu Iniciar"
 
 #: src/installer.ec:1764
 msgid "Thank you for using the Ecere SDK."
-msgstr ""
+msgstr "Obrigado por usar o Ecere SDK"
 
 #: src/installer.ec:1369
 msgid "The installation was not completed."
-msgstr ""
+msgstr "A instalação não foi completada."
 
 #: ../ide/src/licensing.ec:53
 msgid "This program is based on these free open source software components."
-msgstr ""
+msgstr "Este programa é baseado nos seguintes componentes de software livre e aberto."
 
 #: src/installer.ec:270
 msgid "Threading"
-msgstr ""
+msgstr "Paralelismo"
 
 #: ../ide/src/IDESettings.ec:737
 msgid "Tiny C Compiler / GNU Make"
-msgstr ""
+msgstr "Tiny C Compiler / GNU Make"
 
 #: src/installer.ec:342
 msgid "UPX Docs"
-msgstr ""
+msgstr "Documentação UPX"
 
 #: src/installer.ec:269
 msgid "WIA Scanning"
-msgstr ""
+msgstr "Escaneamento WIA"
 
 #: src/installer.ec:287 src/installer.ec:288
 msgid "eC Compiler"
-msgstr ""
+msgstr "Compilador eC"
 
 #: src/installer.ec:341
 msgid "gnurx Docs"
-msgstr ""
+msgstr "Documentação gnurx"
 
 #: src/installer.ec:588
 msgid "terms and conditions"
-msgstr ""
+msgstr "termos e condições"
