share/man/ear: Fixed typo

--- a/share/man/man1/ear.1
+++ b/share/man/man1/ear.1
@@ -46,7 +46,7 @@ The Ecere File manipulation API (which is used by all APIs taking in a file path
 .P
 Resources from imported modules can be accessed as: "<:\fImodule\-name\fR>\fIpath/to/file\fR".
 .P
-Rsources embedded within the application itself can be accessed as: "<:>\fIpath/to/file\fR" or simply ":\fIpath/to/file\fR"
+Resources embedded within the application itself can be accessed as: "<:>\fIpath/to/file\fR" or simply ":\fIpath/to/file\fR"
 .P
 Resources can be emdedded inside applications and modules from the Project View's Resources node in the Ecere IDE.
 
