--- a/compiler/ecp/locale/ecp.pot
+++ b/compiler/ecp/locale/ecp.pot
@@ -10,7 +10,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Basepath: ../\n"
 
-#: ./ecp.ec:1469
+#: ./ecp.ec:1486
 msgid "Syntax:\n   ecp [-t <target platform>] [-cpp <c preprocessor>] [-o <output>] [-symbols <outputdir>] [-I<includedir>]* [-isystem <sysincludedir>]* [-D<definition>]* -c <input>\n"
 msgstr "Syntax:\n   ecp [-t <target platform>] [-cpp <c preprocessor>] [-o <output>] [-symbols <outputdir>] [-I<includedir>]* [-isystem <sysincludedir>]* [-D<definition>]* -c <input>\n"
+
+#: ./ecp.ec:795
+msgid "error: could not resolve value %s for enum %s in precompiler\n"
+msgstr "error: could not resolve value %s for enum %s in precompiler\n"
 
