--- a/compiler/ecc/locale/zh_CN.po
+++ b/compiler/ecc/locale/zh_CN.po
@@ -7,26 +7,26 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ecere\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-02-19 02:50+0000\n"
-"PO-Revision-Date: 2014-03-19 00:01-0500\n"
+"POT-Creation-Date: 2014-07-07 13:24+0000\n"
+"PO-Revision-Date: 2014-07-11 23:05-0500\n"
 "Last-Translator: Jerome St-Louis <jerome@ecere.com>\n"
 "Language-Team: ec <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-03-19 03:16+0000\n"
+"X-Launchpad-Export-Date: 2014-07-12 01:56+0000\n"
 "X-Generator: Poedit 1.6.4\n"
 "Language: zh_CN\n"
 "X-Poedit-Basepath: ..\\..\\..\\\n"
 
-#: ecc.ec:445
+#: ecc.ec:456
 msgid ""
 "Syntax:\n"
-"   ecc [-t <target platform>] [-cpp <c preprocessor>] [-o <output>] [-"
-"symbols <outputdir>] [-I<includedir>]* [-isystem <sysincludedir>]* [-"
-"D<definition>]* -c <input>\n"
+"   ecc [-t <target platform>] [-cpp <c preprocessor>] [-o <output>] [-module "
+"<module>] [-symbols <outputdir>] [-I<includedir>]* [-isystem "
+"<sysincludedir>]* [-D<definition>]* -c <input>\n"
 msgstr ""
-"Syntax:\n"
-"   ecc [-t <target platform>] [-cpp <c preprocessor>] [-o <output>] [-"
-"symbols <outputdir>] [-I<includedir>]* [-isystem <sysincludedir>]* [-"
-"D<definition>]* -c <input>\n"
+"语法:\n"
+"ecc [-t <目标平台>] [-cpp <c预处理器>] [-o <输出>] [-module <模块>] [-"
+"symbols <输出目录>] [-I<头文件包含目录>]* [-isystem <系统头文件包含目录>]* [-"
+"D<定义>]* -c <输入>\n"
